--- a/projects/index.html
+++ b/projects/index.html
@@ -4,6 +4,7 @@ title: Projects
 ---
 
 <h1>My projects</h1>
+I am going to review and think about what I had done and show my projects' description before long.Stay tuned!
 
 {% for post in site.posts %}
 {% if post.categories contains 'projects' %}
